cabal-version:      3.0
name:               xtb-instruments
version:            1.0.0.0
synopsis:           Application for generating lists of instruments available on XTB.
author:             Jacek Szudera
maintainer:         js@warpmail.net

executable xtb-instruments
    ghc-options:      -Wall
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        Types
        Params
    build-depends:
        base ^>= 4.16.4.0
      , text
      , text-show
      , bytestring
      , directory
      , random
      , containers
      , optparse-applicative
      , aeson
      , req
      , mtl
    default-language: GHC2021
    default-extensions: OverloadedStrings
